--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ MarkupSafe==2.0.1
 matplotlib==3.4.3
 mpmath==1.2.1
 numpy==1.21.2
-opencv-python==4.5.3.56
+opencv-python-headless==4.5.3.56
 pandas==1.3.3
 pexpect==4.8.0
 Pillow==8.3.2
